WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275481
[ANGLE] Protect from faulty GPU drivers, reporting nullptr as GL_EXTENSION string
https://bugs.webkit.org/show_bug.cgi?id=275481
Summary
[ANGLE] Protect from faulty GPU drivers, reporting nullptr as GL_EXTENSION st...
Nikolas Zimmermann
Reported
2024-06-14 04:22:00 PDT
On a particular i.MX8 board any WebGL demo crashes in ANGLE initialization, reporting a nullptr instead of a proper null-terminated string, when calling getStringIFunction(GL_EXTENSIONS, i) in libANGLEs GetIndexExtensions() method in renderer/gl/FunctionsGL.cpp
Attachments
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2024-06-14 04:23:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29819
EWS
Comment 2
2024-06-14 08:15:39 PDT
Committed
280016@main
(86c1918fdd79): <
https://commits.webkit.org/280016@main
> Reviewed commits have been landed. Closing PR #29819 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-06-14 08:16:15 PDT
<
rdar://problem/129849502
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug