[ANGLE] Protect from faulty GPU drivers, reporting nullptr as GL_EXTENSION string https://bugs.webkit.org/show_bug.cgi?id=275481

Reviewed by Kimmo Kinnunen and Adrian Perez de Castro.

On a particular i.MX8 board any WebGL demo crashes in ANGLE initialization,
reporting a nullptr instead of a proper null-terminated string, when calling
getStringIFunction(GL_EXTENSIONS, i) in libANGLEs GetIndexExtensions() method
in renderer/gl/FunctionsGL.cpp. Null-check the string before trying to
wrap it in a std::string.

Covered by any WebGL test/demo on a certain i.MX8 board.

* Source/ThirdParty/ANGLE/changes.diff:
* Source/ThirdParty/ANGLE/src/libANGLE/renderer/gl/FunctionsGL.cpp:
(rx::GetIndexedExtensions):

Canonical link: https://commits.webkit.org/280016@main